--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ clap = { version = "4.0", features = ["derive"] }
 inquire = "0.6"
 regex = "1.0"
 anyhow = "1.0"
+dirs = "5.0"
+toml = "0.8"
+walkdir = "2.4"
+chrono = { version = "0.4", features = ["serde"] }
