Fix CI: install clippy for nightly toolchain

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
         toolchain: ${{ matrix.rust }}
     - name: Cache dependencies
       uses: Swatinem/rust-cache@v2
+    - name: Install clippy (nightly)
+      if: matrix.rust == 'nightly'
+      run: rustup component add clippy
     - name: Check
       run: cargo check
     - name: Test
